fix: show full publication images without cropping

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -58,14 +58,14 @@
         > div {
             width: 360px;
             max-width: 100%;
-            aspect-ratio: 16 / 10;
             position: relative;
         }
         img {
             width: 100%;
-            height: 100%;
+            height: auto;
+            display: block;
             box-shadow: 3px 3px 6px #888;
-            object-fit: cover;
+            object-fit: contain;
         }
     }
     
